[tool.poetry]
name = "USB_Quartermaster_SSH"
version = "0.1.0"
description = "Support for Quartermaster to communicate with remote hosts over SSH"
authors = ["Tim Laurence <timdaman@gmail.com>"]
packages = [
    {include = "USB_Quartermaster_SSH"}
]


[tool.poetry.dependencies]
python = "^3.7"
USB_Quartermaster_common = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
